--- a/views/partials/nav.ejs
+++ b/views/partials/nav.ejs
@@ -16,7 +16,13 @@
         <li><a href="#">Contact</a></li>
       </ul>
       <ul class="nav navbar-nav navbar-right">
-        <li><a href="#"><span class="glyphicon glyphicon-log-in"></span> Login</a></li>
+        <% if (!req.user) { %>
+        <li><a href="/signin"><span class="glyphicon glyphicon-log-in"></span> Login</a></li>
+        <% } %>
+        <% if (req.user) { %>
+        <li><a href="/logout"><span class="glyphicon glyphicon-log-in"></span> Logout</a></li>
+        <% } %>
+
       </ul>
     </div>
   </div>
